--- a/xem-phim-bo/van-gioi-ky-duyen/index.html
+++ b/xem-phim-bo/van-gioi-ky-duyen/index.html
@@ -1185,7 +1185,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             2
+             3
             </dd>
             <br/>
            </dl>
@@ -1634,7 +1634,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Angel Guts: Red Classroom
             </span>
             <span class="list-top-movie-item-view">
-             49 lượt xem
+             51 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1655,18 +1655,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/giai-dieu-thien-nien-ky-2000" title="Giai Điệu Thiên Niên Kỷ 2000">
+          <a class="list-top-movie-link" href="/phim-moi/the-gioi-bi-mat-cua-nguoi-vo" title="Thế Giới Bí Mật Của Người Vợ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/giai-dieu-thien-nien-ky-2000-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-gioi-bi-mat-cua-nguoi-vo-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Giai Điệu Thiên Niên Kỷ 2000
+             Thế Giới Bí Mật Của Người Vợ
             </span>
             <span class="list-top-movie-item-en">
-             Fantasia 2000
+             The Wife's Secret World
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1677,18 +1677,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/dai-ngoc-nhi-truyen-ky" title="Đại Ngọc Nhi Truyền Kỳ">
+          <a class="list-top-movie-link" href="/phim-moi/van-menh-trong-tay" title="Vận mệnh trong tay">
            <span class="status">
-            HD Thuyết Minh
+            HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dai-ngoc-nhi-truyen-ky-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/van-menh-trong-tay-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Đại Ngọc Nhi Truyền Kỳ
+             Vận mệnh trong tay
             </span>
             <span class="list-top-movie-item-en">
-             The Legend of Xiao Zhuang
+             League of Mercury Retrograde
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1699,21 +1699,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/biet-doi-thu-cung" title="Biệt Đội Thú Cưng">
+          <a class="list-top-movie-link" href="/phim-moi/niem-niem-tuong-vong" title="Niệm Niệm Tương Vong">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/biet-doi-thu-cung-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/niem-niem-tuong-vong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Biệt Đội Thú Cưng
+             Niệm Niệm Tương Vong
             </span>
             <span class="list-top-movie-item-en">
-             The Star
+             Just For Meeting You
             </span>
             <span class="list-top-movie-item-view">
-             3 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1721,21 +1721,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/goc-quay-dam-mau-3" title="Góc Quay Đẫm Máu 3">
+          <a class="list-top-movie-link" href="/phim-moi/vua-hai-tac-bao-ve-vo-dien-lon-cuoi-cung" title="Vua Hải Tặc: Bảo vệ! Vở diễn lớn cuối cùng">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/goc-quay-dam-mau-3-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vua-hai-tac-bao-ve-vo-dien-lon-cuoi-cung-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Góc Quay Đẫm Máu 3
+             Vua Hải Tặc: Bảo vệ! Vở diễn lớn cuối cùng
             </span>
             <span class="list-top-movie-item-en">
-             [REC] 3: Genesis
+             One Piece: Mamore! Saigo no Dai Butai
             </span>
             <span class="list-top-movie-item-view">
-             1 lượt xem
+             2 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1743,18 +1743,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/tuong-da" title="Tương Dạ">
+          <a class="list-top-movie-link" href="/phim-moi/vong-lua-hoa-hong" title="Vòng Lửa Hoa Hồng">
            <span class="status">
-            HD Vietsub + Thuyết Minh
+            HD Lồng Tiếng
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tuong-da-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vong-lua-hoa-hong-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tương Dạ
+             Vòng Lửa Hoa Hồng
             </span>
             <span class="list-top-movie-item-en">
-             Ever Night
+             Vòng Lửa Hoa Hồng
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
