add new website from server na

--- a/xem-phim-bo/van-gioi-ky-duyen/index.html
+++ b/xem-phim-bo/van-gioi-ky-duyen/index.html
@@ -1185,7 +1185,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             3
+             4
             </dd>
             <br/>
            </dl>
@@ -1655,18 +1655,40 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/the-gioi-bi-mat-cua-nguoi-vo" title="Thế Giới Bí Mật Của Người Vợ">
+          <a class="list-top-movie-link" href="/phim-moi/dem-trang-yeu-trong-mong-mi" title="Đêm trắng: Yêu trong mộng mị">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-gioi-bi-mat-cua-nguoi-vo-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/dem-trang-yeu-trong-mong-mi-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Thế Giới Bí Mật Của Người Vợ
+             Đêm trắng: Yêu trong mộng mị
             </span>
             <span class="list-top-movie-item-en">
-             The Wife's Secret World
+             Sleepless Society: Two Pillows &amp; A Lost Soul
+            </span>
+            <span class="list-top-movie-item-view">
+             4 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/the-parasite-doctor-suzune-genesis" title="The Parasite Doctor Suzune: Genesis">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/the-parasite-doctor-suzune-genesis-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             The Parasite Doctor Suzune: Genesis
+            </span>
+            <span class="list-top-movie-item-en">
+             The Parasite Doctor Suzune: Genesis
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1677,18 +1699,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/van-menh-trong-tay" title="Vận mệnh trong tay">
+          <a class="list-top-movie-link" href="/phim-moi/tham-tu-pho-tau-phan-2" title="Thám Tử Phố Tàu (Phần 2)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/van-menh-trong-tay-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/tham-tu-pho-tau-phan-2-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vận mệnh trong tay
+             Thám Tử Phố Tàu (Phần 2)
             </span>
             <span class="list-top-movie-item-en">
-             League of Mercury Retrograde
+             Detective Chinatown Season 2
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1699,21 +1721,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/niem-niem-tuong-vong" title="Niệm Niệm Tương Vong">
+          <a class="list-top-movie-link" href="/phim-moi/benim-hayatim" title="Benim Hayatim">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/niem-niem-tuong-vong-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/benim-hayatim-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Niệm Niệm Tương Vong
+             Benim Hayatim
             </span>
             <span class="list-top-movie-item-en">
-             Just For Meeting You
+             My Life
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
+             3 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
@@ -1721,43 +1743,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vua-hai-tac-bao-ve-vo-dien-lon-cuoi-cung" title="Vua Hải Tặc: Bảo vệ! Vở diễn lớn cuối cùng">
+          <a class="list-top-movie-link" href="/phim-moi/hen-gap-anh-o-kiep-thu-19" title="Hẹn gặp anh ở kiếp thứ 19">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vua-hai-tac-bao-ve-vo-dien-lon-cuoi-cung-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hen-gap-anh-o-kiep-thu-19-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Vua Hải Tặc: Bảo vệ! Vở diễn lớn cuối cùng
+             Hẹn gặp anh ở kiếp thứ 19
             </span>
             <span class="list-top-movie-item-en">
-             One Piece: Mamore! Saigo no Dai Butai
+             See You in My 19th Life
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/vong-lua-hoa-hong" title="Vòng Lửa Hoa Hồng">
-           <span class="status">
-            HD Lồng Tiếng
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/vong-lua-hoa-hong-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Vòng Lửa Hoa Hồng
-            </span>
-            <span class="list-top-movie-item-en">
-             Vòng Lửa Hoa Hồng
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
+             0 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
